--- a/Projeto.html
+++ b/Projeto.html
@@ -45,5 +45,16 @@
             color: navy;
         }
     </style>
+    <!-- Formatação
+      <strong>
+       <hr>
+       <em>
+        <i>
+        <b>
+        <mark>
+        <sub>
+        <sup>
+        <br>
+    -->
 </body>
 </html>
