--- a/Projeto.html
+++ b/Projeto.html
@@ -19,6 +19,7 @@
         <li>Usuario</li>
         <li>Conta</li>
         <li>Sair</li>
+     
     </ul>
     <!--Elementos de imagem -->
     <img src="imagem/0_vHi6UQcyvM8tT_Jf.gif" alt="">
@@ -33,16 +34,26 @@
         p{
             color: rgb(255, 255, 255);
             font-family: 'Times New Roman', Times, serif;
+            text-align: center;
         }
         li{
             color: rgb(200, 255, 0);
             font-family: Arial, Helvetica, sans-serif;
+            text-align: center;
         }
         h1{
            color: darkblue;
+         text-align: center;
         }
         h2{
             color: navy;
+            text-align: center;
+        }
+        img{
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 50%;
         }
     </style>
     <!-- Formatação
