--- a/Projeto.html
+++ b/Projeto.html
@@ -26,6 +26,7 @@
     <p>
         Bem-vindo ao nosso portal de notícias! Aqui você encontrará as últimas atualizações sobre diversos temas, desde política até entretenimento. Fique à vontade para explorar e se manter informado.
     </p>
+    <video src="video/Como a China virou líder em tecnologia.mp4" controls></video>
     <!-- Tag  -->
     <carro></carro>
     <video></video>
@@ -50,6 +51,12 @@
             text-align: center;
         }
         img{
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 50%;
+        }
+        video{
             display: block;
             margin-left: auto;
             margin-right: auto;
