--- a/html/Projeto.html
+++ b/html/Projeto.html
@@ -22,7 +22,10 @@
      
     </ul>
     <!--Elementos de imagem -->
+     <img src="../"
     <img src="imagem/0_vHi6UQcyvM8tT_Jf.gif" alt="">
+    <title="gif animado"
+    >
     <p>
         Bem-vindo ao nosso portal de notícias! Aqui você encontrará as últimas atualizações sobre diversos temas, desde política até entretenimento. Fique à vontade para explorar e se manter informado.
     </p>
