continuação do projeto

--- a/html/Projeto.html
+++ b/html/Projeto.html
@@ -23,6 +23,11 @@
      
     </ul>
     <!--Elementos de imagem -->
+
+ <!--Caminho relativo-->
+<!--  <img src="../../Front-End/html/imagem/unnamed.png"-->
+       <!--Caminho absoluto-->
+       
      <img src="../"
     <img src="imagem/0_vHi6UQcyvM8tT_Jf.gif" alt="">
     <title="gif animado"
