--- a/html/Projeto.html
+++ b/html/Projeto.html
@@ -27,7 +27,7 @@
  <!--Caminho relativo-->
 <!--  <img src="../../Front-End/html/imagem/unnamed.png"-->
        <!--Caminho absoluto-->
-       
+      <!--img src="/html/imagem/unnamed.png"-->
      <img src="../"
     <img src="imagem/0_vHi6UQcyvM8tT_Jf.gif" alt="">
     <title="gif animado"
