--- a/html/Projeto.html
+++ b/html/Projeto.html
@@ -19,10 +19,10 @@
     <ul>
         <li>Usuario</li>
         <li>Conta</li>
-        <li>Sair</li>
-     
+        <li>Configurações</li>
     </ul>
-    <!--Elementos de imagem -->
+    <img
+    <!--Imagem-->
 
  <!--Caminho relativo-->
 <!--  <img src="../../Front-End/html/imagem/unnamed.png"-->
@@ -83,5 +83,11 @@
         <sup>
         <br>
     -->
+        <!--    
+    <figure>
+        <img src=""
+        <figcaption></figcaption>
+       </figure>
+        -->
 </body>
 </html>
