--- a/Formula01.html
+++ b/Formula01.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="icones/hd-f1-the-official-formula-1-transparent-png-701751712229525ajvwddtfme-removebg-preview.png" type="image/x-icon">
     <title>Formula 01</title>
 </head>
 <body>
