--- a/Formula01.html
+++ b/Formula01.html
@@ -7,6 +7,7 @@
     <title>Formula 01</title>
 </head>
 <body>
+    </style>
    <img src="img/logo.png" width="300">
     <hr>
     <h1>Pilotos de fórmula 1</h1>
