--- a/html/Projeto/Tabelas.html
+++ b/html/Projeto/Tabelas.html
@@ -22,7 +22,7 @@
         <tr> 
             <th>Produto</th>
             <th>Queantidade</th>
-            <th>Prço</th>
+            <th>Perço</th>
         </tr>
       <tr>
            <td>Notebook</td>
