--- a/html/Projeto/Formulario.html
+++ b/html/Projeto/Formulario.html
@@ -33,7 +33,7 @@
                <input type="checkbox" name="estilo" value="sertanjo">sertanjo
                <input type="checkbox" name="estilo" value="pop">pop
                <input type="checkbox" name="estilo" value="rock">rock
-              
+               <input type="checkbox" name="estilo" value="rock">musica classica
            Estado:
            <select>
             <option value="">selecione...</option>
