--- a/html/Projeto/Formulario.html
+++ b/html/Projeto/Formulario.html
@@ -34,6 +34,7 @@
                <input type="checkbox" name="estilo" value="pop">pop
                <input type="checkbox" name="estilo" value="rock">rock
                <input type="checkbox" name="estilo" value="rock">musica classica
+               <input type="checkbox" name="estilo" value="rock">Processa
            Estado:
            <select>
             <option value="">selecione...</option>
@@ -97,5 +98,9 @@
          </button>
          </form>
        -->  
-</body>
+         <form>
+            <fieldset>
+               <input type="text" name="text">
+            </fieldset>
+         </form>
 </html>
